feat : added CRUD operations for Courses using SQLiteDb.

--- a/Graph.Api/appsettings.json
+++ b/Graph.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqLite": "Data Source=database/courses.db;"
+    "SqLite": "Data Source=db/Courses.db;"
   },
   "AllowedHosts": "*"
 }
