--- a/Graph.Data/Graph.Data.csproj
+++ b/Graph.Data/Graph.Data.csproj
@@ -8,10 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Graph.Data.Interfaces\Graph.Data.Interfaces.csproj" />
     <ProjectReference Include="..\Graph.Interfaces\Graph.Interfaces.csproj" />
   </ItemGroup>
 
