--- a/Graph.Services/Graph.Services.csproj
+++ b/Graph.Services/Graph.Services.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Graph.Models\Graph.Models.csproj" />
+    <ProjectReference Include="..\Graph.Data\Graph.Data.csproj" />
+    <ProjectReference Include="..\Graph.Interfaces\Graph.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
