--- a/Graph.Models/Graph.Models.csproj
+++ b/Graph.Models/Graph.Models.csproj
@@ -6,4 +6,11 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="graphiql" Version="2.0.0" />
+    <PackageReference Include="GraphQL" Version="7.4.1" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="7.4.0" />
+    <PackageReference Include="GraphQL.Server.Ui.GraphiQL" Version="7.4.0" />
+  </ItemGroup>
+
 </Project>
